# aosp-internal-book

./: .dockerignore  .gitattributes  .gitignore  00-frontmatter-zh.md  00-frontmatter.md  01-introduction-zh.md  01-introduction.md  02-source-and-build-zh.md  02-source-and-build.md  03-feature-flags-zh.md  03-feature-flags.md  04-boot-and-init-zh.md  04-boot-and-init.md  05-kernel-zh.md  05-kernel.md  06-system-properties-zh.md  06-system-properties.md  07-bionic-and-linker-zh.md  07-bionic-and-linker.md  08-memory-management-zh.md  08-memory-management.md  09-binder-ipc-zh.md  09-binder-ipc.md  10-hal-zh.md  10-hal.md  11-ndk-zh.md  11-ndk.md  12-native-services-zh.md  12-native-services.md  13-graphics-render-pipeline-zh.md  13-graphics-render-pipeline.md  14-animation-system-zh.md  14-animation-system.md  15-audio-system-zh.md  15-audio-system.md  16-media-and-camera-zh.md  16-media-and-camera.md  17-sensors-zh.md  17-sensors.md  18-art-runtime-zh.md  (+103 more)
.claude/skills/book-writer/: SKILL.md
.github/workflows/: build-test.yml  deploy-pages.yml
javascripts/: mermaid-init.js  mermaid-zoom.js
mkdocs-epub-generate/: pyproject.toml
mkdocs-epub-generate/mkdocs_epub_generate/: __init__.py  html_cleanup.py  plugin.py  toc_builder.py
mkdocs-mermaid-renderer/: pyproject.toml
mkdocs-mermaid-renderer/mkdocs_mermaid_renderer/: __init__.py  renderer.py
mkdocs-pdf-generate/: pyproject.toml
mkdocs-pdf-generate/mkdocs_pdf_generate/: __init__.py  plugin.py
overrides/: main.html
stylesheets/: epub.css  mermaid-zoom.css  pdf.css
tests/: test_epub_html_cleanup.py  test_epub_toc_builder.py  test_mermaid_renderer.py
tools/: prepare_mkdocs_docs.py  render_mermaid_png.py
(+2 files in other folders)
