[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mkdocs-epub-generate"
version = "0.1.0"
description = "EPUB3 export for MkDocs with pre-rendered Mermaid diagrams"
license = "Apache-2.0"
requires-python = ">=3.9"
dependencies = [
    "mkdocs>=1.5",
    "mkdocs-mermaid-renderer",
    "ebooklib>=0.18",
    "lxml>=4.9",
]

[project.entry-points."mkdocs.plugins"]
epub-generate = "mkdocs_epub_generate.plugin:EpubGeneratePlugin"

[tool.setuptools.packages.find]
include = ["mkdocs_epub_generate*"]
